feat: Implementar la aplicación principal del botón de emergencia con autenticación de usuarios, gestión de contactos y widgets de emergencia.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <queries>
+        <package android:name="com.whatsapp" />
+        <package android:name="com.whatsapp.w4b" />
+    </queries>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,18 +16,59 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Boton_Emergencia">
+
+        <!-- Widget Providers -->
+        <receiver
+            android:name=".EnfermeriaWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/enfermeria_widget_info" />
+        </receiver>
+
+        <receiver
+            android:name=".TutorWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/tutor_widget_info" />
+        </receiver>
+
+        <receiver
+            android:name=".ContactoWidget"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/contacto_widget_info" />
+        </receiver>
+
+        <!-- Broadcast Receiver for Widget Clicks -->
+        <receiver
+            android:name=".WidgetReceiver"
+            android:enabled="true"
+            android:exported="false" />
+
+        <!-- Activities -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".EmergencyActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ContactListActivity"
             android:exported="false" />
